--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "next": "latest",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-tinacms-strapi": "0.0.0",
+    "react-markdown": "^4.3.1",
+    "react-tinacms-editor": "^0.8.3",
+    "react-tinacms-inline": "^0.10.0",
+    "react-tinacms-strapi": "^0.0.0",
     "remark": "11.0.2",
     "remark-html": "10.0.0",
     "styled-components": "^5.1.1",
